--- a/src/components/Footer/Contact/index.scss
+++ b/src/components/Footer/Contact/index.scss
@@ -2,7 +2,7 @@
   flex-basis: 39%;
   color: #ffffff;
 
-  [type="submit"] {
+  input[type="submit"]{
     border: 1px solid #65d562;
     padding: 10px 2rem;
     width: auto;
@@ -26,5 +26,6 @@
     background-color: #171718;
     color: #ffffff;
     outline: none;
+    border-radius: 0px;
   }
 }
