--- a/src/components/Nav/index.scss
+++ b/src/components/Nav/index.scss
@@ -9,17 +9,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  a svg {
-    max-width: 45px;
-    width: 100%;
-    height: auto;
-    padding-top: 25px;
+  a {
+    text-decoration: none;
+    svg {
+      max-width: 45px;
+      width: 100%;
+      height: auto;
+      padding-top: 25px;
+    }
   }
 }
 
 .nav-links {
   .nav-link {
-    display:inline-block;
+    display: inline-block;
     cursor: pointer;
     &.active {
       font-weight: 700;
