--- a/src/components/Footer/Contact/index.scss
+++ b/src/components/Footer/Contact/index.scss
@@ -9,6 +9,7 @@
     color: #65d562;
     transition: all .2s ease-in-out;
     display: inline-block;
+    border-radius: 0px;
     &:hover {
       background-color: #65d562;
       color: #ffffff;
