--- a/src/components/Footer/Contact/index.scss
+++ b/src/components/Footer/Contact/index.scss
@@ -2,7 +2,7 @@
   flex-basis: 39%;
   color: #ffffff;
 
-  input[type="submit"]{
+  .submit-button{
     border: 1px solid #65d562;
     padding: 10px 2rem;
     width: auto;
