--- a/src/components/Home/Hero/index.scss
+++ b/src/components/Home/Hero/index.scss
@@ -13,14 +13,14 @@
   }
 
   &--header {
-    font-family: "Scandia", serif;
+    font-family: "Scandia", 'Segoe UI',"Trebuchet MS", Helvetica, sans-serif;
     font-weight: 500;
     margin-bottom: 0.5rem;
     font-size: 4.768rem;
   }
 
   &--sub-header {
-    font: 100 1.953rem/1.2em "Scandia", serif;
+    font: 100 1.953rem/1.2em "Scandia", "Trebuchet MS", Helvetica, sans-serif;
     margin-bottom: 1rem;
     letter-spacing: 5px;
   }
