--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #171718;
+  background-color: var(--color-black);
   padding: 4rem 0 2rem;
   @media (min-width: 768px) {
     padding: 5rem 0;
@@ -17,7 +17,7 @@
   }
 
   &__content {
-    color: #ffffff;
+    color: var(--color-white);
     flex-basis: 55%;
     position: relative;
   }
@@ -45,7 +45,7 @@
 
 .phone-link {
   text-decoration: none;
-  color: #ffffff;
+  color:var(--color-white);
   font-weight: 700;
   display: block;
   margin-bottom: 1rem;
