--- a/src/components/Footer/Contact/index.scss
+++ b/src/components/Footer/Contact/index.scss
@@ -3,16 +3,16 @@
   color: #ffffff;
 
   .submit-button{
-    border: 1px solid #65d562;
+    border: 1px solid var(--color-secondary);
     padding: 10px 2rem;
     width: auto;
-    color: #65d562;
+    color: var(--color-secondary);
     transition: all .2s ease-in-out;
     display: inline-block;
     border-radius: 0px;
     &:hover {
-      background-color: #65d562;
-      color: #ffffff;
+      background-color: var(--color-secondary);
+      color: var(--color-white);
       transition: all .2s ease-in-out;
     }
   }
@@ -23,9 +23,9 @@
     width: 100%;
     padding: 8px;
     margin-bottom: 1rem;
-    border: 1px solid #ffffff;
-    background-color: #171718;
-    color: #ffffff;
+    border: 1px solid var(--color-white);
+    background-color: var(--color-black);
+    color: var(--color-white);
     outline: none;
     border-radius: 0px;
   }
