--- a/src/App.scss
+++ b/src/App.scss
@@ -128,7 +128,7 @@ small,
   }
 
   &--sub-header {
-    font: 100 1.953rem/1.2em "Scandia", "Trebuchet MS", Helvetica, sans-serif;
+    font: 100 1.953rem/1.2em "scandia", "Trebuchet MS", Helvetica, sans-serif;
     margin-bottom: 1rem;
     letter-spacing: 5px;
   }
