--- a/src/components/Home/Hero/index.scss
+++ b/src/components/Home/Hero/index.scss
@@ -20,7 +20,7 @@
   }
 
   &--sub-header {
-    font: 100 1.953rem/1.2em "scandia", "Trebuchet MS", Helvetica, sans-serif;
+    font: normal 100 1.953rem/1.2em "scandia", "Trebuchet MS", Helvetica, sans-serif;
     margin-bottom: 1rem;
     letter-spacing: 5px;
   }
