--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,9 +1,6 @@
 .footer {
   background-color: var(--color-black);
-  padding: 4rem 0 2rem;
-  @media (min-width: 768px) {
-    padding: 5rem 0;
-  }
+  padding-bottom: 5rem;
 
   &__wrapper {
     display: flex;
@@ -27,9 +24,6 @@
   position: relative;
   bottom: 0;
   margin-bottom: 3rem;
-  @media (min-width: 768px) {
-    position: absolute;
-  }
   ul {
     list-style: none;
     li {
@@ -48,5 +42,6 @@
   color:var(--color-white);
   font-weight: 700;
   display: block;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  font-family: "Avenir";
 }
