--- a/src/components/Footer/Contact/index.scss
+++ b/src/components/Footer/Contact/index.scss
@@ -2,19 +2,35 @@
   flex-basis: 39%;
   color: #ffffff;
 
-  .submit-button{
-    border: 1px solid var(--color-secondary);
-    padding: 10px 2rem;
-    width: auto;
-    color: var(--color-secondary);
-    transition: all .2s ease-in-out;
+  .submit-button {
+    max-width: 200px;
     display: inline-block;
-    border-radius: 0px;
-    &:hover {
-      background-color: var(--color-secondary);
-      color: var(--color-white);
-      transition: all .2s ease-in-out;
-    }
+    padding: 1rem;
+    margin-bottom: 20px;
+    color: var(--color-primary);
+    font-size: 18px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "Avenir";
+    overflow: hidden;
+    transition: 0.5s;
+  }
+  .submit-button:link,
+  .submit-button:active {
+    color: var(--color-primary);
+  }
+  .submit-button:hover {
+    background: var(--color-primary);
+    border: 1px solid var(--color-primary);
+    color: var(--color-white);
+    box-shadow: 0 0 5px var(--color-primary), 0 0 25px var(--color-primary),
+      0 0 50px var(--color-primary), 0 0 200px var(--color-primary);
+    -webkit-box-reflect: below 10px
+      linear-gradient(
+        transparent,
+        transparent,
+        rgba(0, 0, 0, 0.13333333333333333)
+      );
   }
 
   input,
@@ -28,5 +44,61 @@
     color: var(--color-white);
     outline: none;
     border-radius: 0px;
+    font-family: "Avenir";
+  }
+}
+.notification-wrapper {
+  position: relative;
+}
+
+.email-notification {
+  padding: 5rem;
+  text-align: center;
+  font-family: "Avenir";
+  font-size: 20px;
+  animation-name: appear;
+  animation-duration: 1s;
+  animation-delay: .75s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+
+.email-plane {
+  background-image: url("../../../assets/images/plane.png");
+  background-repeat: no-repeat;
+  background-size: 35%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation-name: fly;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+  top: 0;
+  left: 0;
+}
+
+@keyframes fly {
+  0% {
+    top: 165px;
+    left: -30px;
+    opacity: 0;
+  }
+  8% {
+    opacity: 1;
+  }
+
+  100% {
+    top: -130px;
+    left: 650px;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
