--- a/src/components/Nav/index.scss
+++ b/src/components/Nav/index.scss
@@ -1,21 +1,29 @@
 .nav-bar {
   position: absolute;
-  max-width: 1366px;
-  width: 85%;
   top: 0;
   left: 0;
-  right: 0;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  a {
-    text-decoration: none;
-    svg {
-      max-width: 45px;
-      width: 100%;
-      height: auto;
-      padding-top: 25px;
+  background-color: rgba($color: white, $alpha: 0.02);
+  width: 100%;
+  z-index: 10;
+  &__inner {
+    max-width: 1366px;
+    width: 85%;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+    padding: 10px 0;
+    a {
+      text-decoration: none;
+      svg {
+        max-width: 45px;
+        width: 100%;
+        height: auto;
+      }
     }
   }
 }
@@ -24,6 +32,8 @@
   .nav-link {
     display: inline-block;
     cursor: pointer;
+    font-family: "Avenir", sans-serif;
+    color: var(--color-white);
     &.active {
       font-weight: 700;
     }
@@ -32,10 +42,10 @@
     li {
       display: inline-block;
     }
-    a {
+    .nav-link {
       text-decoration: none;
       margin-right: 1rem;
-      color: #171718ff;
+      color: var(--color-white);
       @media (min-width: 500px) {
         margin-right: 1.5rem;
       }
