--- a/src/App.scss
+++ b/src/App.scss
@@ -88,10 +88,11 @@ small,
   max-width: 1366px;
   width: 85%;
   margin: 0 auto;
+
   &--hero {
     width: 100%;
     margin: 0;
-    padding: 0 6%;
+    padding: 5rem 6% 0;
 
     @media (min-width: 500px) {
       width: 85%;
