--- a/src/components/About/IconGrid/index.scss
+++ b/src/components/About/IconGrid/index.scss
@@ -15,10 +15,13 @@
   flex-basis: 65%;
 }
 
+
+
 .image-container {
   max-width: 450px;
   position: relative;
   margin: 0 auto;
+  transform: translateX(1000px);
   @media (min-width: 991px) {
     position: absolute;
     right: -75px;
@@ -32,5 +35,44 @@
   img {
     width: 100%;
     height: auto;
+  }
+}
+
+.flex-item--icon {
+  flex-basis: 48.5%;
+  padding: 2.5rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.4s ease-in-out;
+  position: relative;
+  opacity: 0;
+  transform: translateY(-25px);
+
+  &:hover {
+    transition: all 0.4s ease-in-out;
+    filter: drop-shadow(0 0 20px var(--color))
+      drop-shadow(0 0 40px var(--color)) drop-shadow(0 0 60px var(--color));
+  }
+
+  img {
+    max-width: 70px;
+    height: auto;
+    transition: all 0.3s ease-out;
+
+    @media (min-width: 768px) {
+      max-width: 80px;
+      transition: all 0.3s ease-out;
+    }
+  }
+
+  @media (min-width: 500px) {
+    flex-basis: 30%;
+    transition: all 0.3s ease-out;
+  }
+
+  @media (min-width: 768px) {
+    flex-basis: 22.5%;
+    transition: all 0.3s ease-out;
   }
 }
