--- a/src/components/Work/SiteGrid/index.scss
+++ b/src/components/Work/SiteGrid/index.scss
@@ -1,5 +1,5 @@
 .flex-item--site {
-  flex-basis: 50%;
+  width: 50%;
   min-height: 275px;
   justify-content: center;
   align-items: center;
@@ -7,10 +7,12 @@
   position: relative;
   text-align: center;
   opacity: 0;
+
   @media (min-width: 768px) {
-    flex-basis: 25%;
+  width: 25%;
     transition: all 0.3s ease-in-out;
   }
+
   &::after {
     position: absolute;
     content: "";
@@ -21,6 +23,7 @@
     left: 0;
     transition: all 0.3s ease-in-out;
   }
+
   &:hover {
     &::after {
       position: absolute;
@@ -33,6 +36,7 @@
       transition: all 0.3s ease-in-out;
     }
   }
+
   img {
     max-width: 200px;
     width: 75%;
