--- a/src/components/About/IconGrid/index.scss
+++ b/src/components/About/IconGrid/index.scss
@@ -12,7 +12,10 @@
 .icon-grid {
   display: flex;
   flex-wrap: wrap;
-  flex-basis: 65%;
+  width: 100%;
+  @media (min-width: 991px) {
+    width: 65%;
+  }
 }
 
 
@@ -22,16 +25,11 @@
   position: relative;
   margin: 0 auto;
   transform: translateX(1000px);
-  @media (min-width: 991px) {
-    position: absolute;
-    right: -75px;
-    bottom: 0;
-    // max-width: 450px;
-  }
-  @media (min-width: 1330px) {
-    position: absolute;
-    bottom: 0;
-  }
+
+  @media (min-width: 991px) {}
+
+  @media (min-width: 1330px) {}
+
   img {
     width: 100%;
     height: auto;
@@ -39,7 +37,7 @@
 }
 
 .flex-item--icon {
-  flex-basis: 48.5%;
+  width : 48.5%;
   padding: 2.5rem 0;
   display: flex;
   align-items: center;
@@ -51,8 +49,7 @@
 
   &:hover {
     transition: all 0.4s ease-in-out;
-    filter: drop-shadow(0 0 20px var(--color))
-      drop-shadow(0 0 40px var(--color)) drop-shadow(0 0 60px var(--color));
+    filter: drop-shadow(0 0 20px var(--color)) drop-shadow(0 0 40px var(--color)) drop-shadow(0 0 60px var(--color));
   }
 
   img {
@@ -67,12 +64,12 @@
   }
 
   @media (min-width: 500px) {
-    flex-basis: 30%;
+    width: 30%;
     transition: all 0.3s ease-out;
   }
 
   @media (min-width: 768px) {
-    flex-basis: 22.5%;
+    width: 22.5%;
     transition: all 0.3s ease-out;
   }
 }
