--- a/src/components/Work/SiteGrid/index.scss
+++ b/src/components/Work/SiteGrid/index.scss
@@ -10,7 +10,7 @@
   cursor: pointer;
 
   @media (min-width: 768px) {
-  width: 25%;
+    width: 25%;
     transition: all 0.3s ease-in-out;
     min-height: 275px;
   }
@@ -45,4 +45,12 @@
     z-index: 2;
     position: relative;
   }
+}
+
+.flex-item--bg {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
